# wabbit-lang

./: README.md  TODO.md
examples/: factorial.wb  functions.wb
vscode-wb/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-wb/syntaxes/: wb.tmLanguage.json
wabbit/: __main__.py  _compiler.py  _format.py  _lexer.py  build.sh  parsit.py  pyproject.toml  runit.py
wabbit/wabbit/: __main__.py  _ast.py  _compiler.py  _errors.py  _format.py  _interpret.py  _lexer.py  _parser.py  compile.py  parsit.py  runit.py  runtime.c  tokenit.py
