[tool.poetry]
name = "wabbit"
version = "0.1.0"
description = "Wabbit programming language compiler, interpreter and tools."
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
